--- a/server/.env
+++ b/server/.env
@@ -11,7 +11,7 @@ DB_PASSWORD=Suresh@123
 DB_NAME=Tallydashboard
 
 # fronted
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3000,https://tally-client-production.up.railway.app
 BASE_URL=http://localhost:5000
 
 # tally
